# techcoder-cli

./: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md
techcoder_cli/: agent.py  autocomplete.py  chat.py  config.py  differ.py  file_detector.py  file_handler.py  main.py  stack_detector.py
techcoder_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
techcoder_cli/config/: __init__.py  prompts.py  settings.py
techcoder_cli/core/: __init__.py  agent.py  chat.py  memory.py
techcoder_cli/mcp/: __init__.py  client.py  config.py  tools.py
techcoder_cli/tools/: __init__.py  differ.py  file_detector.py  file_handler.py  stack_detector.py
techcoder_cli/utils/: __init__.py  helpers.py  logger.py
techcoder_cli/web/: __init__.py  server.py
tests/: test_chat.py  test_file_detector.py  test_file_handler.py  test_memory.py
